add news change the developer email

--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,10 @@
-Changes in version 0.99.0 (2019-05-16)
-+ Submitted to Bioconductor
+Changes in version 1.1.1
++ Refactoring code
++ Add supports for package developer at C++, R levels
+Changes in version 1.0.0
++ Publish in Bioconductor
 Changes in version 0.99.2 (2019-08-6)
 + Clean some formating issues
+Changes in version 0.99.0 (2019-05-16)
++ Submitted to Bioconductor
+
