--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,5 @@
+Changes in version 1.1.6
++ Add memory check on Linix system
 Changes in version 1.1.1
 + Refactoring code
 + Add supports for package developer at C++, R levels
