--- a/vignettes/quick_start_guide.Rmd
+++ b/vignettes/quick_start_guide.Rmd
@@ -68,7 +68,7 @@ Currently, the package supports `raw`, `logical`, `integer` and `double` data ty
 
 Please note that sharing a list object will not sharing the list itself, but sharing each element of the list object instead. Therefore, adding or replace an element on a shared list in the main process will not implicitly change the shared list on the other processes. Since a data frame is fundamentally a list object, sharing a data frame will follow the same principle as sharing a list. 
 
-When a list consists of both sharable and non-sharable objects, `noError` argument can be used in the `share` function to share the sharable elements and keep the non-sharable elements same(Otherwise an error will be shown). Alternatively, the function `tryShare` is a shortcut for `share(..., noError = TRUE)`
+When a list consists of both sharable and non-sharable objects, `mustWork` argument can be used in the `share` function to share the sharable elements and keep the non-sharable elements same(Otherwise an error will be shown). Alternatively, the function `tryShare` is a shortcut for `share(..., mustWork = FALSE)`
 ```{r}
 ## the element `a` is sharable and b is not
 mydata <- list(a = 1:3, b = letters[1:3])
@@ -76,11 +76,11 @@ mydata <- list(a = 1:3, b = letters[1:3])
 ## Will get an error if we directly share the object
 ## share(mydata)
 
-## Use the `noError` argument to suppress the error message
-sharedList1 <- share(mydata, noError = TRUE)
+## Use the `mustWork` argument to suppress the error message
+sharedList1 <- share(mydata, mustWork = FALSE)
 
 ## Use the function `tryShare`
-## this is equivalent to `share(mydata, noError = TRUE)`
+## this is equivalent to `share(mydata, mustWork = FALSE)`
 sharedList2 <- tryShare(mydata)
 
 ## Only the element `a` is a shared object
@@ -117,12 +117,12 @@ There are some options that can control the default behavior of a shared object,
 ```{r}
 getSharedObjectOptions()
 ```
-As beforementioned, the option `sharedSubset` controls whether the subset of a shared object is still a shared object. The option `noError` suppress the error message when the function `share` encounter a non-sharable object and force the function to return the same object. We will talk about the options `copyOnWrite` and `sharedCopy` in the advanced section, but for most users these two options should not be changed. The global setting can be modified via `setSharedObjectOptions`
+As beforementioned, the option `sharedSubset` controls whether the subset of a shared object is still a shared object. The option `mustWork` suppress the error message when the function `share` encounter a non-sharable object and force the function to return the same object. We will talk about the options `copyOnWrite` and `sharedCopy` in the advanced section, but for most users these two options should not be changed. The global setting can be modified via `setSharedObjectOptions`
 ```{r}
 ## change the default setting
-setSharedObjectOptions(noError = TRUE)
+setSharedObjectOptions(mustWork = FALSE)
 ## Check if the change is made
-getSharedObjectOptions("noError")
+getSharedObjectOptions("mustWork")
 ```
 
 # Advanced topic
