--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,5 @@
+Changes in version 1.3.18
++ Make the package functions process-safe
 Changes in version 1.3.8
 + Support complex
 + Support pairlist
